# ProteinProfiler

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py
src/protein_profiler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/protein_profiler/io/: ingestor.py  manifest.py
src/protein_profiler/msa/: aligner.py  qc.py  searcher.py
src/protein_profiler/mutscan/: scanner.py
src/protein_profiler/prioritizer/: ranker.py
src/protein_profiler/ptm/: annotator.py
src/protein_profiler/rin/: network.py
src/protein_profiler/structure/: annotator.py
